test_suite/tests/ui/pass/option_array_type.rs
use clapi::macros::*;

#[command]
#[option(array)]
fn test(array: [u32; 10]){}

fn main(){}