test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_arg.rs
use clapi::macros::*;

#[command]
#[option(x, arg=123)]
fn app(x: i64){}

fn main(){}